# pebble-productivity-app

./: .gitignore  LICENSE  main.py  pyproject.toml
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 0da82c113579_add_recurring_task_fields.py  239424abe4bf_link_tasks_to_recurring.py  2fc8ffbe9e1e_add_recurring_task_fields_safely.py  3bab46f5f3e3_add_completed_at_column.py  4747bdd22a61_add_recurring_rule_id_to_tasks.py  b6f7f2e701e3_add_recurring_tasks_table.py  e97882116955_add_recurring_task_fields.py
client/: .gitignore  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  provider.tsx
client/src/api/: projects.ts  tasks.ts  types.ts
client/src/components/: ActivityHeatmap.tsx  CompletionRate.tsx  CreateTask.tsx  Header.tsx  PieChart.tsx  ProjectSidebar.tsx  TaskCalendar.tsx  TaskItem.tsx  TaskList.tsx  TaskPanel.tsx  WindRose.tsx
client/src/icons/: CollapseSidebar.tsx  Edit.tsx  ExpandSidebar.tsx  Moon.tsx  Pause.tsx  PlayButton.tsx  Plus.tsx  Repeat.tsx  Sun.tsx  TrashBin.tsx
client/src/layouts/: default.tsx
client/src/pages/: Analytics.tsx  Calendar.tsx  Dashboard.tsx
client/src/styles/: calendar.css  heatmap.css
client/src/utils/: date.ts  recurring.ts
server/: app.py  fix.py  main.py
server/db/: session.py
server/models/: project.py  recurring_task.py  task.py
server/services/: project_service.py  recurring_generator.py  recurring_service.py  serializers.py  sync_service.py  task_service.py  utils.py
server/static/: index.html
server/static/assets/: index-BQOda2u0.js  index-CrG6ptOO.js  (+3 more)
